# eijiro

./: Cargo.toml  eijiro.glade
eijiro-parser/src/: lib.rs
src/: main.rs
